--- a/Marketplace/package.json
+++ b/Marketplace/package.json
@@ -1,9 +1,21 @@
 {
   "dependencies": {
+    "@sentry/node": "^5.1.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-async-handler": "^1.1.4",
+    "express-handlebars": "^3.0.2",
+    "express-validation": "^1.0.2",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.5"
+    "kue": "^0.11.6",
+    "mongoose": "^5.5.5",
+    "mongoose-paginate": "^5.0.3",
+    "nodemailer": "^6.1.1",
+    "nodemailer-express-handlebars": "^3.0.0",
+    "require-dir": "^1.2.0",
+    "youch": "^2.0.10"
   },
   "scripts": {
     "start": "nodemon src/index.js"
